# kedro-vs-maestro

./: .gitignore  README.md
Python/: example.py  pyproject.toml
Python/kedro-vs-maestro/: README.md  pyproject.toml
Python/kedro-vs-maestro/.viz/: stats.json
Python/kedro-vs-maestro/conf/base/: catalog.yml
Python/kedro-vs-maestro/src/kedro_vs_maestro/: __init__.py  __main__.py  nodes.py  pipeline_registry.py  settings.py
R/: example.R  orchestrator.R
R/pipelines/: iris_model.R
