[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_vs_maestro"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-vs-maestro = "kedro_vs_maestro.__main__:main"

[tool.kedro]
package_name = "kedro_vs_maestro"
project_name = "kedro-vs-maestro"
kedro_init_version = "0.19.8"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_vs_maestro.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "facf771b7c394d8994bb5a8591d45d72"
